--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,17 +1,21 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "description": "todo list",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "argon2": "^0.31.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
+    "readline-sync": "^1.4.10"
   }
 }
