--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,16 +1,49 @@
 {
-  "name": "front-end",
-  "version": "1.0.0",
-  "description": "This is the front end for the Todo List app. See the tutorials for how it is built.",
-  "main": ".eslintrc.js",
+  "name": "jacobanderson",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/plugin-transform-class-properties": "^7.22.5",
+    "axios": "^1.5.1",
+    "consolidate": "^1.0.3",
+    "core-js": "^3.33.0",
+    "postcss-markdown": "^1.2.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.3.4",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "prettier": "^3.0.3",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0"
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jacoba1100254352/todo-list-with-projects.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^1.5.0",
-    "moment": "^2.29.4"
-  }
+  "bugs": {
+    "url": "https://github.com/jacoba1100254352/todo-list-with-projects/issues"
+  },
+  "homepage": "https://github.com/jacoba1100254352/todo-list-with-projects#readme"
 }
